<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:fillViewport="true"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_view_login"
                android:paddingTop="10dip"
                android:paddingBottom="10dip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/banner_login_activity"
                    android:layout_marginStart="10dip"
                    android:src="@mipmap/ic_launcher"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/image_view_login"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_edit_text_login_activity"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:background="@color/button_login"
                    android:hint="@string/login_hint"
                    android:singleLine="true"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_text_login_activity"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:background="@color/button_login"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/skip_button_login_activity"
                        android:layout_weight="1"
                        android:text="@string/skip_button_text_login_activity" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/email_button_login_activity"
                        android:layout_weight="1"
                        android:text="@string/login_button_text" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registration_text_view_login_activity"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/registration_text_login_activity"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textColorLink="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error_message_login_activity"
                android:layout_below="@+id/registration_text_view_login_activity"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:singleLine="true"
                android:ellipsize="end" />


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_bar_view"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:background="@color/primary">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logging_text_login_activity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logging_text_login_activity"
            android:layout_below="@+id/progress_bar"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>