...

            <Button
                android:text="@string/ok_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:id="@+id/ok_btn"
                android:layout_alignParentTop="true"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
...
