...
    android:background="@color/background">

    <TextView
        android:text="89db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/measure_button_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:id="@+id/current_db_measure_fragment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
...
